# BunnyCLI

./: Cargo.toml  README.md
.github/workflows/: workflow.yml
src/: cli.rs  config.rs  main.rs
