[package]
name = "bunnycli"
version = "0.1.0"
authors = ["Sebastian Schmidt <publicarray@users.noreply.github.com>"]
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/publicarray/bunnycli"
readme = "README.md"
description = "The unofficial CLI for BunnyCDN 🐰"
categories = ["command-line-utilities"]
keywords = ["BunnyCDN", "Storage Bucket"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md"
]

[badges]
maintenance = { status = "experimental" }
is-it-maintained-issue-resolution = { repository = "publicarray/bunnycli" }
is-it-maintained-open-issues = { repository = "publicarray/bunnycli" }

[dependencies]
bunnycdn = { path = "../bunnycdn", version = "0.1" }
# Async
tokio = "0.2"
# cli parse arguments/commands
clap = { git = "https://github.com/clap-rs/clap/" }
# read/save config
toml = "0.5"
serde = "1.0"
dirs = "2.0"
# password/secrets
rpassword = "4.0"
keyring = "0.9.0"
# logging
log = "0.4"
simplelog = "0.7"
# errors
anyhow = "1.0"

[profile.release]
lto = true

